--- a/package.json
+++ b/package.json
@@ -4,33 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-mocha --timeout 40000 test/**.ts",
-    "test": "ts-mocha --timeout 40000 test/**.ts"
+    "start": "ts-mocha -r tsx --timeout 40000 test/**.ts",
+    "test": "ts-mocha -r tsx --timeout 40000 test/**.ts",
+    "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
+    "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/bn.js": "^5.1.0",
-    "@types/mocha": "^10.0.6",
-    "@typescript-eslint/eslint-plugin": "^6.20.0",
-    "assert": "^2.1.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-typescript": "^0.14.0",
-    "prettier": "^3.2.4",
+    "@types/bn.js": "^5.1.6",
+    "@types/mocha": "^10.0.8",
+    "@types/chai": "^4.3.19",
+    "prettier": "^3.3.3",
     "ts-mocha": "^10.0.0",
     "ts-node": "^10.7.0",
-    "typescript": "^4.6.3"
+    "chai": "^5.1.1",
+    "mocha": "^10.7.3",
+    "typescript": "^5.6.2",
+    "tsx": "^3.12.5"
   },
   "dependencies": {
-    "@solana-developers/helpers": "^2.1.0",
-    "@solana/spl-token": "^0.4.0",
-    "@solana/spl-token-metadata": "^0.1.2",
-    "@solana/web3.js": "^1.89.1",
+    "@solana-developers/helpers": "^2.5.5",
     "@typescript-eslint/parser": "^6.20.0",
-    "bs58": "^5.0.0",
-    "dotenv": "^16.0.0",
-    "eslint": "^8.56.0"
+    "dotenv": "^16.4.5"
   }
 }
