--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-mocha --timeout 40000 test/**.ts",
-    "test": "ts-mocha --timeout 40000 test/**.ts",
+    "start": "ts-mocha -r tsx --timeout 40000 test/**.ts",
+    "test": "ts-mocha -r tsx --timeout 40000 test/**.ts",
     "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
     "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
   },
@@ -21,7 +21,8 @@
     "ts-node": "^10.7.0",
     "chai": "^5.1.1",
     "mocha": "^10.7.3",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "tsx": "^3.12.5"
   },
   "dependencies": {
     "@solana-developers/helpers": "^2.5.5",
